--- a/birthday.html
+++ b/birthday.html
@@ -122,7 +122,7 @@
       To me, you're not just my best friend... You're way more special than that. 🥺  
     </div>
 
-    <img src="https://placekitten.com/400/300" alt="Memory" class="photo fade">
+    <img src="./okay.png" alt="Memory" class="photo fade">
 
     <div class="section fade">
       Your smile lights up even my dullest days 🌈<br>
